--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "next": "^14.2.5"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "GENERATE_SOURCEMAP=false react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "vercel-build": "react-scripts build"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "vercel-build": "next build"
+
   },
   "eslintConfig": {
     "extends": [
