--- a/package.json
+++ b/package.json
@@ -7,18 +7,18 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "lucide-react": "^0.263.1",
+    "next": "^14.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^10.1.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "next": "^14.2.5"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "vercel-build": "next build"
-
   },
   "eslintConfig": {
     "extends": [
